Add isbn lookup form and ng-repeat to handle results

--- a/app/partials/partial1.html
+++ b/app/partials/partial1.html
@@ -1,1 +1,12 @@
 <p>This is the partial for view 1.</p>
+<form ng-submit="submitISBN()">
+  <input type="text" ng-model="queryISBN">
+  <input type="submit">
+</form>
+<ul>
+  <li ng-repeat="ed in altEditions">
+    {{ed.title}}
+    {{ed.author}}
+    {{ed.isbn[0]}}
+  </li>
+</ul>
