--- a/app/partials/partial1.html
+++ b/app/partials/partial1.html
@@ -1,4 +1,8 @@
 <p>This is the partial for view 1.</p>
+<form ng-submit="submitISBNList(queryISBNList)">
+  <textarea ng-model="queryISBNList" autofocus></textarea>
+  <input type="submit">
+</form>
 <form ng-submit="submitISBN(queryISBN)">
   <input type="text" ng-model="queryISBN" autofocus>
   <input type="submit">
