Add view3 with controller for displaying sellers

--- a/app/partials/partial2.html
+++ b/app/partials/partial2.html
@@ -13,7 +13,7 @@
 
 <ul>
   <li ng-repeat="book in books">
-    <h3>{{book.title}} &emdash; {{book.author}}</h3>
+    <h3>{{book.title}} &mdash; {{book.author}}</h3>
 
     <ul>
       <li ng-repeat="listing in book.listings">
