--- a/app/css/app.css
+++ b/app/css/app.css
@@ -28,3 +28,21 @@
   content: "";
   padding: 0;
 }
+
+.books-checkbox {
+  display: inline-block;
+  vertical-align: top;
+  margin-top: 30px;
+}
+.books-img {
+  display: inline-block;
+  width: 60px;
+  height: 80px;
+  vertical-align: top;
+  margin-right: 10px;
+}
+
+.books-label {
+  display: inline-block;
+  width: 400px;
+}
