--- a/app/partials/user.html
+++ b/app/partials/user.html
@@ -1,5 +1,10 @@
-<p>This is the partial for user.</p>
+<div class="span6 offset3">
+
+<h1>enter goodreads user id</h1><br>
+
 <form ng-submit="submitGoodreadsUserId(goodreadsUserId)">
   <input type="text" ng-model="goodreadsUserId" autofocus>
   <input type="submit">
 </form>
+
+</div>
