Fix checkbox selection of editions

--- a/app/partials/editions.html
+++ b/app/partials/editions.html
@@ -12,7 +12,7 @@
   </div>
 
   <div ng-hide="!editions.length">
-    <form ng-submit="submitSelectedEditions(selected_eds)" ng-disabled="!books.length">
+    <form ng-submit="submitSelectedEditions(selection)" ng-disabled="!books.length">
       <div>
         Select
         <a href="" ng-click="setAllSelections(true)">All</a> / 
