--- a/app/partials/sellers.html
+++ b/app/partials/sellers.html
@@ -1,19 +1,73 @@
-<p>This is the partial for view 3.</p>
+<div class="span6 offset3">
 
-<ul>
-  <li ng-repeat="seller in sellers | orderBy:sellerSortKey:true">
-  <h3>{{seller.name}}</h3> 
-  ( {{seller.feedback_rating}}% &ndash; {{seller.feedback_count}} )
+<h1>results</h1><br>
 
-    <ul>
-      <li ng-repeat="listing in seller.listings | orderBy:'book'">
-        <a href="{{listing.half_item_url}}">
-          <b>{{listing.book.title}}</b>
-        </a><br>
-        {{listing.book.author}}<br>
-        {{listing.price | currency}}<br>
-        {{listing.comments}}
+<div ng-show="!sellers.length">
+  <h4>No sellers found.</h4>
+</div>
+
+<div ng-hide="!sellers.length">
+  <div ng-repeat="seller in sellers | orderBy:sellerSortKey:true">
+    <div class="well well-small">
+      <div>
+        <div class="seller-label">{{seller.name}}</div>
+        <div> Feedback: {{seller.feedback_count}} &middot; {{seller.feedback_rating}}%</div>
+      </div>
+      <br>
+
+      <ol>
+      <li ng-repeat="book in seller.books">
+        <div><b>{{book.title}}</b></div>
+        <div>{{book.author}}</div>
+
+        <div><small>
+          <div ng-repeat="listing in seller.book_listings[$index]">
+            <div>
+              <a href="{{listing.half_item_url}}" target="_blank">
+                <b>{{listing.edition.title}}</b></a>
+              {{!listing.edition.year ? '' : '(' + listing.edition.year + ')'}}</div>
+            <div class="pull-right">{{listing.price | currency}}</div>
+            <div>{{listing.edition.author}}</div>
+            <div class="pull-right">condition: {{listing.condition | bookConditionHuman}}</div>
+            <!--<div>isbn: {{listing.edition.isbn}}</div>-->
+            <div>comments: {{listing.comments}}</div>
+            <br>
+            <!--TODO: hard/softcover, half listing book title and author-->
+          </div>
+        </small></div>
+
       </li>
-    </ul>
-  </li>
-</ul>
+      </ol>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--<ul>-->
+  <!--<h3>{{seller.name}}</h3> -->
+  <!--( {{seller.feedback_rating}}% &ndash; {{seller.feedback_count}} )-->
+
+    <!--<ul>-->
+      <!--<li ng-repeat="listing in seller.listings | orderBy:'book'">-->
+        <!--<a href="{{listing.half_item_url}}">-->
+          <!--<b>{{listing.book.title}}</b>-->
+        <!--</a><br>-->
+        <!--{{listing.book.author}}<br>-->
+        <!--{{listing.price | currency}}<br>-->
+        <!--{{listing.comments}}-->
+      <!--</li>-->
+    <!--</ul>-->
+  <!--</li>-->
+<!--</ul>-->
