--- a/app/css/app.css
+++ b/app/css/app.css
@@ -29,6 +29,14 @@
   padding: 0;
 }
 
+.table th.text-right, .table td.text-right {
+  text-align: right;
+}
+
+.table th.text-center, .table td.text-center {
+  text-align: center;
+}
+
 .books-checkbox {
   display: inline-block;
   vertical-align: top;
