Move seller books rendering to directive with partial and control

--- a/app/partials/sellers.html
+++ b/app/partials/sellers.html
@@ -8,54 +8,7 @@
 
 <div ng-hide="!sellers.length">
   <div ng-repeat="seller in sellers | orderBy:sellerSortKey:true">
-    <div class="well well-small">
-      <div>
-        <div class="seller-label">{{seller.name}}</div>
-        <div>feedback: {{seller.feedback_count}} &middot; {{seller.feedback_rating}}%</div>
-      </div>
-      <br>
-
-      <table class="table">
-        <thead><tr>
-          <th></th>
-          <th>price</th>
-          <th>shipping</th>
-          <th></th>
-          <th></th>
-        </tr></thead>
-        <tbody>
-          <tr>
-            <td></td>
-            <td></td>
-            <td class="text-right">$3.49</td>
-            <td colspan="2">base shipping cost</td>
-          </tr>
-
-          <tr ng-repeat="sbook in seller.books">
-            <td class="text-right">{{$index + 1}}.</td>
-            <td class="text-right"><b>{{sbook.bestListing.price | currency}}</b></td>
-            <td class="text-right"><span ng-if="$index !== 0">+ $1.89</span></td>
-            <td>
-              <div><b>{{sbook.book.title}}</b></div>
-              <div>{{sbook.book.author}}</div>
-              <div><small>comments: {{sbook.bestListing.comments}}</small></div>
-            </td>
-            <td class="text-right">
-              <a href="{{sbook.bestListing.half_item_url}}" target="_blank"
-                  class="btn btn-primary" style="white-space: nowrap">
-                buy now >></a>
-            </td>
-          </tr>
-
-          <tr>
-            <td></td>
-            <td style="border-top: 2px solid black"><b>$24.30</b></td>
-            <td style="border-top: 2px solid black"></td>
-            <td colspan="2"></td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+    <div ubs-seller-books="seller"></div>
   </div>
 </div>
 
