Update seller book bestListing on listings radio button select

--- a/app/partials/books.html
+++ b/app/partials/books.html
@@ -3,7 +3,7 @@
 <h1>select books</h1><br>
 
 <div ng-show="loading">
-  <img src="/static/spinner.gif"> 
+  <img src="/static/spinner.gif"> &nbsp;&nbsp;&nbsp;
   Loading books...
 </div>
 <div ng-hide="loading">
