--- a/app/partials/editions.html
+++ b/app/partials/editions.html
@@ -3,7 +3,7 @@
 <h1>select editions</h1><br>
 
 <div ng-show="loading">
-  <img src="/static/spinner.gif"> 
+  <img src="/static/spinner.gif"> &nbsp;&nbsp;&nbsp;
   Loading editions...
 </div>
 <div ng-hide="loading">
