Add sort of sellers and book listings

--- a/app/partials/sellers.html
+++ b/app/partials/sellers.html
@@ -7,7 +7,7 @@
 </div>
 
 <div ng-hide="!sellers.length">
-  <div ng-repeat="seller in sellers | orderBy:sellerSortKey:true">
+  <div ng-repeat="seller in sellers">
     <div ubs-seller-books="seller"></div>
   </div>
 </div>
