Add giphy reading gifs during half.com queries

--- a/app/partials/listings.html
+++ b/app/partials/listings.html
@@ -1,6 +1,5 @@
 <div class="span4 offset4">
 
-<br> <br>
 <h3><center>querying half.com...</center></h3><br>
 
 <div class="progress">
@@ -10,5 +9,11 @@
 <div class="progress">
   <div class="bar" style="width: {{apiRequestProgress.page.percent}}%;"></div>
 </div>
+
+</div>
+
+<div class="row span6 offset3" style="text-align: center; padding-top: 40px">
+
+<div giphy-embed></div>
 
 </div>
