--- a/app/partials/listings.html
+++ b/app/partials/listings.html
@@ -2,12 +2,12 @@
 
 <h3><center>querying half.com...</center></h3><br>
 
-<div class="progress">
+<div class="progress" ng-hide="apiRequestProgress.call.finished">
   <div class="bar" style="width: {{apiRequestProgress.call.percent}}%;"></div>
 </div>
 
-<div class="progress">
-  <div class="bar" style="width: {{apiRequestProgress.page.percent}}%;"></div>
+<div class="progress" ng-show="apiRequestProgress.call.finished">
+  <div class="bar bar-success" style="width: {{apiRequestProgress.page.percent}}%;"></div>
 </div>
 
 </div>
