--- a/app/partials/shelves.html
+++ b/app/partials/shelves.html
@@ -12,8 +12,8 @@
   <select multiple autofocus class="shelves-select" size="20"
     ng-model="selectedShelves" 
     ng-options="shelf.name for shelf in shelves">
-  </select><br>
-  <input type="submit">
+  </select><br><br>
+  <button type="submit" class="btn btn-primary">continue &gt;&gt;</button>
 </form>
 
 </div>
