--- a/app/partials/editions.html
+++ b/app/partials/editions.html
@@ -17,6 +17,7 @@
         Select
         <a href="" ng-click="setAllSelections(true)">All</a> / 
         <a href="" ng-click="setAllSelections(false)">None</a>
+        <button type="submit" class="btn btn-primary pull-right">continue &gt;&gt;</button>
       </div><br>
       <div ng-repeat="book in books">
         <div class="well well-small">
@@ -43,7 +44,7 @@
           </small></div>
         </div>
       </div>
-      <input type="submit">
+      <button type="submit" class="btn btn-primary pull-right">continue &gt;&gt;</button>
     </form>
 
   </div>
