--- a/app/partials/user.html
+++ b/app/partials/user.html
@@ -2,9 +2,9 @@
 
 <h1>enter goodreads user id</h1><br>
 
-<form ng-submit="submitGoodreadsUserId(goodreadsUserId)">
+<form class="form-inline" ng-submit="submitGoodreadsUserId(goodreadsUserId)">
   <input type="text" ng-model="goodreadsUserId" autofocus>
-  <input type="submit">
+  <button type="submit" class="btn btn-primary">continue &gt;&gt;</button>
 </form>
 
 </div>
