--- a/app/partials/test.html
+++ b/app/partials/test.html
@@ -1,2 +1,10 @@
 {{msg}}
 
+{{currentPage}}
+
+<div ubs-pager pager-num-pages="pagedSellers.length" pager-per-page="perPage" pager-current-page="currentPage"></div>
+
+<hr>
+<div style="height: 2000px; background-color: yellow">hello</div>
+
+<div ubs-pager pager-num-pages="pagedSellers.length" pager-per-page="perPage" pager-current-page="currentPage"></div>
