--- a/app/css/app.css
+++ b/app/css/app.css
@@ -55,6 +55,29 @@
   width: 400px;
 }
 
+.book-options-form {
+  height: 20px;
+  font-size: 12px;
+}
+
+.book-options-select {
+  height: 20px;
+  font-size: 12px;
+}
+
+input[type=number].book-options-input {
+  height: 20px;
+  font-size: 12px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
+input[type=number].book-options-input::-webkit-inner-spin-button, 
+input[type=number].book-options-input::-webkit-outer-spin-button { 
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 .seller-label {
   font-size: 24px;
   line-height: 30px;
