--- a/app/partials/books.html
+++ b/app/partials/books.html
@@ -28,15 +28,25 @@
             <div>{{book.author}}</div>
             <div>
               <ng-form class="form-inline book-options-form" ng-hide="!book.isbn || !selection[$index]">
-                <fieldset ng-disabled="!selection[$index]">
+                <fieldset class="book-options-fieldset" ng-disabled="!selection[$index]">
                   max price: $
                   <input type="number" step="0.01" min="0.00" required
                     class="input-mini book-options-input" ng-model="book.options.maxprice">
                   &nbsp;&nbsp;
                   condition:
-                  <select class="span2 book-options-select" ng-model="book.options.condition"
+                  <select class="book-options-select" ng-model="book.options.condition"
                     ng-options="cond | bookConditionHuman for cond in bookConditions">
                   </select>
+                  &nbsp;&nbsp;
+                  <label class="checkbox book-options-label">
+                    <input type="checkbox" ng-model="book.options.excludeLibrary">
+                    exclude library
+                  </label>
+                  &nbsp;&nbsp;
+                  <label class="checkbox book-options-label">
+                    <input type="checkbox" ng-model="book.options.excludeCliffsNotes">
+                    exclude cliff's notes
+                  </label>
                 </fieldset>
               </form>
             </div>
