--- a/app/partials/seller_books.html
+++ b/app/partials/seller_books.html
@@ -59,7 +59,8 @@
         <td style="border-top: 2px solid black"></td>
         <td colspan="2">
           {{avgBookCost | currency}} per book
-          &nbsp; &nbsp; &nbsp; score: {{seller.books_score}}
+          <!--TODO: remove score-->
+          &nbsp; &nbsp; &nbsp; score: {{seller.booksScore}}
         </td>
       </tr>
     </tbody>
