--- a/app/css/app.css
+++ b/app/css/app.css
@@ -10,6 +10,8 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .main-content {
